[package]
name = "common"
version = "0.1.0"
authors = ["Nathan Jeffords <n8@n8ware.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1", features = ["derive"] }
futures = "^0.3"
bincode = "^1"
tokio = "^1"
