[package]
name = "cpm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.25"
displaydoc = "0.2.1"
structopt = "^0.3"
serde = "^1"
toml = "^0.5"
tar = "^0.4"

common = { path = "../common" }
