[package]
name = "dl-crates"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version="^0.11", features = ["blocking"] }
thiserror = "1.0.25"
displaydoc = "0.2.1"
structopt = "^0.3"
tempfile = "^3"
tar = "^0.4"
