[package]
name = "mirror"
version = "0.1.0"
authors = ["Nathan Jeffords <n8@n8ware.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version="^0.14.9", features=["full"] }
tokio = { version="1",       features=["full"] }
hyper-staticfile = "0.6.0"
tracing = "0.1.26"
tracing-subscriber = "0.2.18"
futures = "0.3.15"
thiserror = "1.0.25"
displaydoc = "0.2.1"

common= {path="../common"}
