[package]
name = "proxy"
version = "0.1.0"
authors = ["Nathan Jeffords <n8@n8ware.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version="^0.14.9", features=["full"] }
tokio = { version="1",       features=["full"] }
hyper-tls = "0.5.0"
futures = "0.3.15"
tracing = "0.1.26"
tracing-subscriber = "0.2.18"
thiserror = "1.0.25"
displaydoc = "0.2.1"

common= { path="../common" }

[dependencies.structopt]
version = "0.3.21"
